# ReactionKinetics

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: arrhenius.csv  first_order.csv  gas_volume.csv
rxnkinetics/: __init__.py  cli.py  core.py  plotting.py
tests/: test_core.py
